# rec_engine

./: README.md  pyproject.toml
assests/: architecture.dot
rec_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rec_engine/: __init__.py  callbacks.py  config.py  experiments.py  feature_selection.py  inference.py  model.py  objective.py  preprocessing.py  train_functions.py  utils.py
