[project]
name = "rec-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalancedlearningregression>=0.0.2",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "optuna>=4.3.0",
    "rich>=13.9.4",
    "tensorboard>=2.15.2",
    "tensorflow-probability==0.23.0",
    "tensorflow-recommenders==0.7.3",
    "tensorflow[and-cuda]==2.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rec_engine"]
